[gd_scene load_steps=4 format=3 uid="uid://cufllsjneowyo"]

[ext_resource type="Script" uid="uid://b7ah8b6tsn5im" path="res://scripts/plot.gd" id="1_cyvgl"]
[ext_resource type="Texture2D" uid="uid://omop6f3mok8e" path="res://art/recttext.png" id="1_syd1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syd1t"]
size = Vector2(64, 64)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_cyvgl")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_syd1t")

[node name="MouseDetect" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_syd1t")

[node name="HoverRect" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.467926, 0.493956, 0.08015, 0.494118)

[node name="Button" type="Button" parent="."]
offset_left = 16.0
offset_top = 39.0
offset_right = 49.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 10
text = "Build"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
